--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <header>
+        <div>
+          <h1>Best place to learn frontend</h1>
+          <p>Go from absolute beginner to pro with a simplified process</p>
+          <button>Start now</button>
+        </div>
+        <figure>
+          <img src="./assets/dashboard/laptop.png" alt="Home page">
+        </figure>
+      </header>
     </section>
+    
+    <main>
+      <section id="about">
+        <h2>About</h2>
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At necessitatibus eius laudantium beatae aspernatur cum possimus corrupti saepe, in delectus, officia officiis ea doloremque a similique cupiditate natus exercitationem nam?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At necessitatibus eius laudantium beatae aspernatur cum possimus corrupti saepe, in delectus, officia officiis ea doloremque a similique cupiditate natus exercitationem nam?</p>
+        </div>
+        <figure>
+          <img src="./assets/dashboard/about.jpg" alt="">
+        </figure>
+      </section>
+
+      <section>
+
+      </section>
+    </main>
   </body>
 </html>
