--- a/index.html
+++ b/index.html
@@ -23,25 +23,52 @@
           <button>Start now</button>
         </div>
         <figure>
-          <img src="./assets/dashboard/laptop.png" alt="Home page">
+          <img src="./assets/dashboard/laptop.png" alt="Home page" />
         </figure>
       </header>
     </section>
-    
+
     <main>
       <section id="about">
         <h2>About</h2>
         <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At necessitatibus eius laudantium beatae aspernatur cum possimus corrupti saepe, in delectus, officia officiis ea doloremque a similique cupiditate natus exercitationem nam?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At necessitatibus eius laudantium beatae aspernatur cum possimus corrupti saepe, in delectus, officia officiis ea doloremque a similique cupiditate natus exercitationem nam?</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+            necessitatibus eius laudantium beatae aspernatur cum possimus
+            corrupti saepe, in delectus, officia officiis ea doloremque a
+            similique cupiditate natus exercitationem nam?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+            necessitatibus eius laudantium beatae aspernatur cum possimus
+            corrupti saepe, in delectus, officia officiis ea doloremque a
+            similique cupiditate natus exercitationem nam?
+          </p>
         </div>
         <figure>
-          <img src="./assets/dashboard/about.jpg" alt="">
+          <img src="./assets/dashboard/about.jpg" alt="" />
         </figure>
       </section>
 
-      <section>
-
+      <section id="discord">
+        <h2>Discord</h2>
+        <figure>
+          <img src="./assets/dashboard/discord.png" alt="" />
+        </figure>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste nobis
+            tenetur nostrum, eligendi voluptate natus animi quia excepturi quas,
+            possimus aliquam. Dolorem laudantium accusamus accusantium odit sunt
+            esse placeat eos.
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus,
+            nobis? Porro, iusto totam! Facere cumque placeat distinctio natus
+            molestias tempora quod non aspernatur magnam nihil et harum, vero
+            repudiandae necessitatibus?
+          </p>
+        </div>
       </section>
     </main>
   </body>
