--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button>Start now</button>
         </div>
         <figure>
-          <img src="./assets/dashboard/laptop.png" alt="Home page" />
+          <img src="./assets/dashboard/laptop.png" alt="Home page image" />
         </figure>
       </header>
     </section>
@@ -53,7 +53,7 @@
       <section id="discord">
         <h2>Discord</h2>
         <figure>
-          <img src="./assets/dashboard/discord.png" alt="" />
+          <img src="./assets/dashboard/discord.png" alt="Discord" />
         </figure>
         <div>
           <p>
@@ -69,6 +69,15 @@
             repudiandae necessitatibus?
           </p>
         </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <form action="">
+          <label>Email</label>
+          <input type="text" placeholder="kat@example.com" />
+          <label>Message</label>
+          <textarea type="text" placeholder="kat@example.com"></textarea>
+        </form>
       </section>
     </main>
   </body>
