--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css">
   </head>
+
   <body>
     <section>
       <nav>
@@ -90,5 +91,6 @@
       </div>
       <p>Copyright Frontend Simplified</p>
     </footer>
+
   </body>
 </html>
