--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <nav>
-        <img src="./assets/dashboard/FES.svg" alt="" />
+        <img src="./assets/dashboard/FES.svg" class="logo" alt="" />
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#discord">Discord</a></li>
