--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
@@ -20,7 +20,9 @@
       <header>
         <div>
           <h1>Best place to learn frontend</h1>
-          <p>Go from absolute beginner to pro with a simplified process</p>
+          <p class="subheader">
+            Go from absolute beginner to pro with a simplified process
+          </p>
           <button>Start now</button>
         </div>
         <figure>
@@ -91,6 +93,5 @@
       </div>
       <p>Copyright Frontend Simplified</p>
     </footer>
-
   </body>
 </html>
