--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
         </ul>
       </nav>
       <header>
-        <div>
-          <h1>Best place to learn frontend</h1>
-          <p class="subheader">
-            Go from absolute beginner to pro with a simplified process
-          </p>
-          <button>Start now</button>
+        <div class="row">
+          <div>
+            <h1>Best place to learn frontend</h1>
+            <p class="subheader">
+              Go from absolute beginner to pro with a simplified process
+            </p>
+            <button>Start now</button>
+          </div>
+          <figure>
+            <img src="./assets/dashboard/laptop.png" alt="Home page image" />
+          </figure>
         </div>
-        <figure>
-          <img src="./assets/dashboard/laptop.png" alt="Home page image" />
-        </figure>
       </header>
     </section>
 
@@ -72,7 +74,7 @@
             repudiandae necessitatibus?
           </p>
         </div>
-      </section>
+
       <section id="contact">
         <h2>Contact</h2>
         <form action="">
@@ -80,11 +82,13 @@
           <input type="text" placeholder="kat@example.com" />
           <label>Message</label>
           <textarea type="text" placeholder="kat@example.com"></textarea>
+        
         </form>
       </section>
     </main>
 
     <footer>
+      <img src="./assets/dashboard/FES.svg" alt="" />
       <div>
         <a href="#about">About</a>
         <a href="#discord">Discord</a>
@@ -94,4 +98,5 @@
       <p>Copyright Frontend Simplified</p>
     </footer>
   </body>
+  
 </html>
