--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            necessitatibus eius laudantium beatae aspernatur cum possimus
-            corrupti saepe, in delectus, officia officiis ea doloremque a
-            similique cupiditate natus exercitationem nam?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            necessitatibus eius laudantium beatae aspernatur cum possimus
-            corrupti saepe, in delectus, officia officiis ea doloremque a
-            similique cupiditate natus exercitationem nam?
-          </p>
+        <div class="section__description">
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+              necessitatibus eius laudantium beatae aspernatur cum possimus
+              corrupti saepe, in delectus, officia officiis ea doloremque a
+              similique cupiditate natus exercitationem nam?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+              necessitatibus eius laudantium beatae aspernatur cum possimus
+              corrupti saepe, in delectus, officia officiis ea doloremque a
+              similique cupiditate natus exercitationem nam?
+            </p>
+          </div>
+          <figure class="about__img--wrapper">
+            <img src="./assets/dashboard/about.jpg" alt="" />
+          </figure>
         </div>
-        <figure>
-          <img src="./assets/dashboard/about.jpg" alt="" />
-        </figure>
       </section>
 
       <section id="discord">
