--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <section id="about">
         <h2>About</h2>
         <div class="section__description">
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-              necessitatibus eius laudantium beatae aspernatur cum possimus
-              corrupti saepe, in delectus, officia officiis ea doloremque a
+          <div classs="section__description--wrapper">
+            <p class="section__description--para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+            necessitatibus eius laudantium beatae aspernatur cum possimus
+            corrupti saepe, in delectus, officia officiis ea doloremque a
               similique cupiditate natus exercitationem nam?
             </p>
-            <p>
+            <p class="section__description--para">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. At
               necessitatibus eius laudantium beatae aspernatur cum possimus
               corrupti saepe, in delectus, officia officiis ea doloremque a
