--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="section__description">
           <div classs="section__description--wrapper">
             <p class="section__description--para">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            necessitatibus eius laudantium beatae aspernatur cum possimus
-            corrupti saepe, in delectus, officia officiis ea doloremque a
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+              necessitatibus eius laudantium beatae aspernatur cum possimus
+              corrupti saepe, in delectus, officia officiis ea doloremque a
               similique cupiditate natus exercitationem nam?
             </p>
             <p class="section__description--para">
@@ -59,23 +59,26 @@
 
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="./assets/dashboard/discord.png" alt="Discord" />
-        </figure>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste nobis
-            tenetur nostrum, eligendi voluptate natus animi quia excepturi quas,
-            possimus aliquam. Dolorem laudantium accusamus accusantium odit sunt
-            esse placeat eos.
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus,
-            nobis? Porro, iusto totam! Facere cumque placeat distinctio natus
-            molestias tempora quod non aspernatur magnam nihil et harum, vero
-            repudiandae necessitatibus?
-          </p>
+        <div class="section__description">
+          <figure>
+            <img src="./assets/dashboard/discord.png" alt="Discord" />
+          </figure class="about__img--wrapper">
+          <div classs="section__description--wrapper">
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
+              nobis tenetur nostrum, eligendi voluptate natus animi quia
+              excepturi quas, possimus aliquam. Dolorem laudantium accusamus
+              accusantium odit sunt esse placeat eos.
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus,
+              nobis? Porro, iusto totam! Facere cumque placeat distinctio natus
+              molestias tempora quod non aspernatur magnam nihil et harum, vero
+              repudiandae necessitatibus?
+            </p>
+          </div>
         </div>
+      </section>
 
       <section id="contact">
         <h2>Contact</h2>
@@ -84,7 +87,6 @@
           <input type="text" placeholder="kat@example.com" />
           <label>Message</label>
           <textarea type="text" placeholder="kat@example.com"></textarea>
-        
         </form>
       </section>
     </main>
@@ -100,5 +102,4 @@
       <p>Copyright Frontend Simplified</p>
     </footer>
   </body>
-  
 </html>
