--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           <input type="text" placeholder="kat@example.com" />
           <label>Message</label>
           <textarea type="text" placeholder="kat@example.com"></textarea>
+          <button>Contact us</button>
         </form>
       </section>
     </main>
